syntax = "proto3";

package internal.v1;

import "protos/orchestratorinternalv1/payment_step.proto";

option go_package = "github.com/yourorg/payment-orchestrator/pkg/gen/protos/orchestratorinternalv1;orchestratorinternalv1";

message PaymentPlan {
  string plan_id = 1;
  repeated PaymentStep steps = 2;
}
